deploy/overlays/local/common-resources/ingress/test/transform-rest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-transform-rest-ingress
  namespace: dh-health
  labels:
    ehrnode: test-node
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: transform.test.local.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-transform-rest
            port:
              number: 8080
